--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@ volume = {129},
 number = {6},
 pages = {e2023JE008053},
 doi = {https://doi.org/10.1029/2023JE008053},
-year = {2024}
+year = {2024},
+selected={true}
 }
 
 @article{Xiao2022,
