--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,8 @@ number = {6},
 pages = {e2023JE008053},
 doi = {https://doi.org/10.1029/2023JE008053},
 year = {2024},
-selected={true}
+selected={true},
+url={https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2023JE008053}
 }
 
 @article{Xiao2022,
@@ -22,4 +23,5 @@ number = {10},
 pages = {e2021JE007158},
 doi = {https://doi.org/10.1029/2021JE007158},
 year = {2022}
+url={https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2021JE007158}
 }
