--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,6 +22,6 @@ volume = {127},
 number = {10},
 pages = {e2021JE007158},
 doi = {https://doi.org/10.1029/2021JE007158},
-year = {2022}
+year = {2022},
 url={https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2021JE007158}
 }
