--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,19 @@
 ---
 ---
+@article{Seltzer2025,
+doi = {10.3847/PSJ/ad973e},
+url = {https://dx.doi.org/10.3847/PSJ/ad973e},
+year = {2025},
+month = {feb},
+publisher = {The American Astronomical Society},
+volume = {6},
+number = {2},
+pages = {45},
+author = {Seltzer, Cassandra and Lien, Rudi and Radzom, Brandon T. and Mullikin, Ella and Bott, Kimberly and Brouwer, Gwendolyn and Burtt, David G. and Gentgen, Chloe and Abbate, Jewel and Gandarillas, Victor and Green, Austin P. and Head, Tristen and Hill, Jonathon R. and Larson, Jennifer N. and Montiel, Nicholas J. and Moreno, M. Regina A. and Wagner, Nicholas L. and Wijesekara, Piyumi and Keane, James Tuttle and Nash, Alfred E. and Scully, Jennifer},
+title = {THUNDER: A Titan Orbiter Mission Concept for the New Frontiers Program Designed at the JPL Planetary Science Summer School},
+journal = {The Planetary Science Journal},
+abstract = {Saturn's moon Titan is an enigmatic icy world whose surface is constantly modified by its active, Earthlike precipitation system. Here, we propose the Titan's Hydrocarbons: Uncovering New Dimensions of Evolutionary pRocesses (THUNDER) mission concept to investigate how Titan's surface reflects the nature of its interior and its active hydrocarbon cycle. This mission will change our understanding of Titan's surface through three science objectives: characterizing the heat and material transport properties of Titan's icy outer layer, tracing surface liquid storage through and across the crust, and assessing the total hydrocarbon budget through time. This New Frontiers-class mission, designed as part of the Jet Propulsion Laboratory Planetary Science Summer School, responds directly to the call for a Titan orbiter in the NASA Planetary Science and Astrobiology Decadal Survey 2023–2032. THUNDER's focused geology and geophysics mission could achieve full surface mapping to complement both the Cassini–Huygens and Dragonfly missions using gravity science, radar with three operational modes, and a visible-to-infrared spectrometer. These instruments together could give us the first look at Titan as a fully connected and geologically active world, revolutionizing our understanding of icy bodies, fluvial and atmospheric processes, and habitability across geologic time. Here, we summarize the goals of the science mission and engineering approaches, as well as challenges and future directions to study before THUNDER can become a viable mission concept.}
+}
 
 @article{Wagner2024,
 author = {Wagner, N. L. and James, P. B. and Ermakov, A. I. and Sori, M. M.},
